# Fibo_testpypi

./: Dockerfile  LICENSE  README.md  pyproject.toml  pyprojectold.toml  requirement_pip.txt  setup.cfg.old  setup.py
.github/workflows/: publish_to_testpypi.yml  publish_to_testpypi.yml.backup
fibo_testpypi/: __init__.py
fibo_testpypi2/: fibo.py
src/fibo_testpypi2/: _calc.c  fibo.py
wheelhouse/: fibo_testpypi2-0.3.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  fibo_testpypi2-0.3.1-cp310-cp310-musllinux_1_1_x86_64.whl  fibo_testpypi2-0.3.1-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  fibo_testpypi2-0.3.1-cp38-cp38-musllinux_1_1_x86_64.whl  fibo_testpypi2-0.3.1-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  fibo_testpypi2-0.3.1-cp39-cp39-musllinux_1_1_x86_64.whl
