[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"


[project]
name = "fibo-testpypi2"
version = "0.3.1"
dependencies = []
requires-python = ">= 3.8"
authors = [
	{name = "Nayuta Yamane", email = "e60e256@gmail.com"}
]
description = "A class to calculate fibonacci numbers"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fibo_testpypi2"]

[tool.cibuildwheel]
build = "cp3{8,9,10}-manylinux_x86_64 cp3{8,9,10}-musllinux_x86_64"
